--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cz.fely.weightedaverage">
+    package="com.felycz.weightedaverage">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -11,30 +11,29 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Default">
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/title_activity_main"
-            android:theme="@style/Default">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings" />
-
-        <activity
-            android:name=".LicenceActivity"
-            android:label="@string/action_licenses">
+        <activity android:name="com.felycz.weightedaverage.SplashScreen"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="cz.fely.weightedaverage.SHOW_LICENSES" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.felycz.weightedaverage.MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Default">
+        </activity>
+        <activity
+            android:name="com.felycz.weightedaverage.SettingsActivity"
+            android:label="@string/title_activity_settings" />
 
         <activity
-            android:name=".AboutFragment"
+            android:name="com.felycz.weightedaverage.LicenceActivity"
+            android:label="@string/action_licenses">
+        </activity>
+
+        <activity
+            android:name="com.felycz.weightedaverage.AboutFragment"
             android:label="@string/aboutAppMenuItem" />
     </application>
 
