--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,40 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.felycz.weightedaverage">
+          package="cz.fely.weightedaverage">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Default">
-        <activity android:name="com.felycz.weightedaverage.SplashScreen"
-            android:label="@string/app_name">
+        android:theme="@style/Light">
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Light">
             <intent-filter>
-                <action android:name="cz.fely.weightedaverage.SHOW_LICENSES" />
-                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
-            android:name="com.felycz.weightedaverage.MainActivity"
-            android:label="@string/title_activity_main"
-            android:theme="@style/Default">
-        </activity>
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"/>
         <activity
-            android:name="com.felycz.weightedaverage.SettingsActivity"
-            android:label="@string/title_activity_settings" />
-
-        <activity
-            android:name="com.felycz.weightedaverage.LicenceActivity"
+            android:name=".LicenceActivity"
             android:label="@string/action_licenses">
-        </activity>
+            <intent-filter>
+                <action android:name="cz.fely.weightedaverage.SHOW_LICENSES"/>
 
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
         <activity
-            android:name="com.felycz.weightedaverage.AboutFragment"
-            android:label="@string/aboutAppMenuItem" />
+            android:name=".AboutFragment"
+            android:label="@string/aboutAppMenuItem"/>
+        <activity
+            android:name=".SplashScreen"
+            android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name=".Main2Activity"
+            android:label="@string/title_activity_main2"
+            android:theme="@style/Light">
+        </activity>
     </application>
 
 </manifest>
