--- a/build.gradle
+++ b/build.gradle
@@ -4,28 +4,30 @@ android {
     compileSdkVersion 24
     buildToolsVersion '24.0.2'
     defaultConfig {
-        applicationId "cz.fely.weightedaverage"
-        minSdkVersion 11
-        targetSdkVersion 24
-        versionCode 1
-        versionName "1.8.S.2.4"
+        applicationId 'cz.fely.weightedaverage'
+        minSdkVersion 15
+        targetSdkVersion 23
+        versionCode 2
+        versionName '2.0.S.0.1'
         manifestPlaceholders = [HOCKEYAPP_APP_ID: "a6f2b12acd1a4e22a763dab9a356879f"]
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         jackOptions {
             enabled true
         }
-        vectorDrawables.useSupportLibrary = true
     }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+    applicationVariants.all { variant ->
+        variant.resValue "string", "versionName", variant.versionName
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    productFlavors {
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 dependencies {
@@ -41,3 +43,4 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'net.hockeyapp.android:HockeySDK:4.0.0'
 }
+
