--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -16,12 +16,7 @@
         android:theme="@style/Light">
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+            android:label="@string/app_name">
         </activity>
         <activity
             android:name=".SettingsActivity"
@@ -39,10 +34,14 @@
             android:name=".AboutFragment"
             android:label="@string/aboutAppMenuItem"/>
         <activity
-            android:name=".SplashScreen"
-            android:label="@string/app_name">
+            android:name=".SplashScreen">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN"/>
+
+            <category android:name="android.intent.category.LAUNCHER"/>
+        </intent-filter>
         </activity>
+        <activity android:name=".FloatingWindow"/>
         <meta-data android:name="net.hockeyapp.android.appIdentifier" android:value="${HOCKEYAPP_APP_ID}" />
     </application>
-
 </manifest>
