--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion '24.0.2'
     defaultConfig {
         applicationId 'cz.fely.weightedaverage'
-        minSdkVersion 15
-        targetSdkVersion 24
-        versionCode 3
-        versionName '2.0.S.5.1'
+        minSdkVersion 16
+        targetSdkVersion 25
+        versionCode 6
+        versionName '2.4.B.2.7'
         manifestPlaceholders = [HOCKEYAPP_APP_ID: "a6f2b12acd1a4e22a763dab9a356879f"]
         jackOptions {
             enabled true
@@ -35,11 +35,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2') {
         exclude group: 'com.google.code.findbugs'
     }
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:support-v4:25.0.1'
-    compile 'com.android.support:support-vector-drawable:25.0.1'
-    compile 'com.android.support:design:25.0.1'
-    compile 'com.android.support:preference-v7:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.android.support:support-v4:25.1.1'
+    compile 'com.android.support:support-vector-drawable:25.1.1'
+    compile 'com.android.support:design:25.1.1'
+    compile 'com.android.support:preference-v7:25.1.1'
     testCompile 'junit:junit:4.12'
     compile 'net.hockeyapp.android:HockeySDK:4.0.0'
 }
