--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:supportsRtl="true"
+        android:name="cz.fely.weightedaverage.utils.WipeDataUtil"
         android:theme="@style/Light">
         <activity
             android:name=".SettingsActivity"
