--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId 'cz.fely.weightedaverage'
         minSdkVersion 15
         targetSdkVersion 25
-        versionCode 15
-        versionName '3.5.B.5.55'
+        versionCode 16
+        versionName '4.0.E.0.0'
         manifestPlaceholders = [HOCKEYAPP_APP_ID: "a6f2b12acd1a4e22a763dab9a356879f"]
         jackOptions {
             enabled true
